// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`InputSearch should match snapshot 1`] = `
<body>
  <div>
    <div
      class="relative z-10"
    >
      <button
        class="flex h-8 items-center gap-1.5 rounded border border-neutral bg-surface-neutral px-2.5 text-xs text-neutral hover:border-neutral-strong focus:outline-none"
        type="button"
      >
        <span
          class="max-w-32 truncate"
        >
          my-value
        </span>
        <i
          aria-hidden="true"
          class="fa-regular fa-angle-down text-[10px] text-neutral-subtle transition-transform"
        />
      </button>
      <div
        class="absolute left-0 top-full mt-1 w-64 overflow-hidden rounded-md border border-neutral bg-surface-neutral shadow-[0_0_32px_rgba(0,0,0,0.08)] hidden"
      >
        <div
          class="relative border-b border-neutral p-2"
        >
          <i
            aria-hidden="true"
            class="fa-regular fa-magnifying-glass absolute left-4 top-1/2 -translate-y-1/2 text-xs text-neutral-subtle"
          />
          <input
            aria-activedescendant=""
            aria-autocomplete="list"
            aria-controls="downshift-:r6:-menu"
            aria-expanded="false"
            aria-labelledby="downshift-:r6:-label"
            autocomplete="off"
            class="h-7 w-full rounded border border-neutral bg-surface-neutral pl-6 pr-2 text-xs text-neutral placeholder:text-neutral-subtle focus:border-brand-strong focus:outline-none"
            id="downshift-:r6:-input"
            placeholder="Search…"
            role="combobox"
            value="my-value"
          />
        </div>
        <ul
          aria-labelledby="downshift-:r6:-label"
          class="m-0 max-h-40 list-none overflow-y-auto p-2"
          id="downshift-:r6:-menu"
          role="listbox"
        >
          <li
            aria-disabled="false"
            aria-selected="false"
            class="flex h-9 w-full items-center justify-between rounded px-2 text-xs text-neutral transition-colors hover:bg-surface-neutral-subtle"
            id="downshift-:r6:-item-0"
            role="option"
          >
            my-value
            <i
              aria-hidden="true"
              class="fa-regular fa-check text-brand"
            />
          </li>
        </ul>
      </div>
    </div>
  </div>
</body>
`;

exports[`InputSearch should match with snapshot 1`] = `
<body>
  <div>
    <div
      class="relative z-10"
    >
      <button
        class="flex h-8 items-center gap-1.5 rounded border border-neutral bg-surface-neutral px-2.5 text-xs text-neutral hover:border-neutral-strong focus:outline-none"
        type="button"
      >
        <span
          class="max-w-32 truncate"
        >
          my-value
        </span>
        <i
          aria-hidden="true"
          class="fa-regular fa-angle-down text-[10px] text-neutral-subtle transition-transform rotate-180"
        />
      </button>
      <div
        class="absolute left-0 top-full mt-1 w-64 overflow-hidden rounded-md border border-neutral bg-surface-neutral shadow-[0_0_32px_rgba(0,0,0,0.08)]"
      >
        <div
          class="relative border-b border-neutral p-2"
        >
          <i
            aria-hidden="true"
            class="fa-regular fa-magnifying-glass absolute left-4 top-1/2 -translate-y-1/2 text-xs text-neutral-subtle"
          />
          <input
            aria-activedescendant="downshift-:rd:-item-0"
            aria-autocomplete="list"
            aria-controls="downshift-:rd:-menu"
            aria-expanded="true"
            aria-labelledby="downshift-:rd:-label"
            autocomplete="off"
            class="h-7 w-full rounded border border-neutral bg-surface-neutral pl-6 pr-2 text-xs text-neutral placeholder:text-neutral-subtle focus:border-brand-strong focus:outline-none"
            id="downshift-:rd:-input"
            placeholder="Search…"
            role="combobox"
            value="my-value"
          />
        </div>
        <ul
          aria-labelledby="downshift-:rd:-label"
          class="m-0 max-h-40 list-none overflow-y-auto p-2"
          id="downshift-:rd:-menu"
          role="listbox"
        >
          <li
            aria-disabled="false"
            aria-selected="true"
            class="flex h-9 w-full items-center justify-between rounded px-2 text-xs text-neutral transition-colors hover:bg-surface-neutral-subtle bg-surface-neutral-subtle"
            id="downshift-:rd:-item-0"
            role="option"
          >
            my-value
            <i
              aria-hidden="true"
              class="fa-regular fa-check text-brand"
            />
          </li>
        </ul>
      </div>
    </div>
  </div>
</body>
`;
